<resources>
    <string name="app_name">HomeInside</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="imageViewSplashScreen">Imagen de transicion de inicio de la app</string>

    <string name="scroll_temp">Temperatura</string>
    <string name="scroll_ilum">Iluminación</string>
    <string name="scroll_pers">Persianas</string>
    <string name="scroll_tools">Configuración</string>
    <string name="scroll_general">General</string>
    <string name="scroll_jardin">Jardín</string>
    <string name="scroll_meteo">Meteo</string>
    <string name="scroll_eventos">Eventos</string>
    <string name="scroll_otros">Otros</string>
    <string name="scroll_about">About</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="habitacion_salon">Salón</string>
    <string name="habitacion_cocina">Cocina</string>
    <string name="habitacion_bano">Baño</string>
    <string name="habitacion_pasillo">Pasillo</string>
    <string name="habitacion_principal">Hab. principal</string>
    <string name="habitacion_invitados">Hab. invitados</string>

    <string name="colaboradores">Colaboradores</string>

    <string name="login">Identificarse</string>
    <string name="usuario">Usuario</string>
    <string name="hintUsuario">Introduzca su usuario</string>
    <string name="password">Contraseña</string>
    <string name="hintPassword">Introduzca su contraseña</string>
    <string name="title_activity_temperatura">Temperatura</string>
</resources>

