<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rodrigo.sdm.com.homeinside.MainActivity"
    tools:showIn="@layout/app_bar_main"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >
<TableLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*"
    android:background="#ffffff">

    <TableRow>
        <LinearLayout
            android:background="@drawable/casaplano2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_span="3"
            android:layout_marginBottom="15dp">


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="59dp"
                android:layout_height="55dp"
                android:layout_marginBottom="0dp"
                app:srcCompat="@drawable/casa_icon"
                android:layout_gravity="bottom"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="MAIN SPACE"
                android:textColor="#00516C"
                android:textStyle="bold"
                android:textSize="@dimen/activity_horizontal_margin"
                android:textAlignment="gravity"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:layout_gravity="bottom" />
        </LinearLayout>
    </TableRow>
    <TableRow>
        <ImageButton
            android:id="@+id/button_general"
            android:onClick="buttonOnClicked"
            android:layout_width="match_parent"
            android:background="#ffffff"
            android:layout_height="wrap_content"
            android:src="@mipmap/home_redondo" />
        <ImageButton
            android:background="#ffffff"
            android:onClick="buttonOnClicked"
            android:id="@+id/button_iluminacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/bombilla_redonda"
            />
        <ImageButton
            android:id="@+id/button_temperatura"
            android:onClick="buttonOnClicked"
            android:background="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/temperatura_redonda"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scroll_general"
            android:textColor="#00516C"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scroll_ilum"
            android:textColor="#00516C"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="2"
            android:textColor="#00516C"
            android:text="@string/scroll_temp"
            android:textAlignment="center"
            />

    </TableRow>
    <TableRow>
        <ImageButton
            android:id="@+id/button_persianas"
            android:layout_width="match_parent"
            android:onClick="buttonOnClicked"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:src="@mipmap/persianas_redododo"
            />
        <ImageButton
            android:id="@+id/button_jardin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="buttonOnClicked"
            android:background="#ffffff"
            android:src="@mipmap/jardin_redondo"
            />
        <ImageButton
            android:id="@+id/button_meteo"
            android:layout_width="match_parent"
            android:onClick="buttonOnClicked"
            android:background="#ffffff"
            android:layout_height="wrap_content"
            android:src="@mipmap/meteo_redondo"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scroll_pers"
            android:textColor="#00516C"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scroll_jardin"
            android:textColor="#00516C"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scroll_meteo"
            android:textColor="#00516C"
            android:lines="2"
            android:textAlignment="center"
            />
    </TableRow>
    <TableRow>
        <ImageButton
            android:id="@+id/button_eventos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="buttonOnClicked"
            android:background="#ffffff"
            android:src="@mipmap/eventos_redondos"
            />
        <ImageButton
            android:id="@+id/button_config"
            android:layout_width="match_parent"
            android:onClick="buttonOnClicked"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:src="@mipmap/config_redondo"
            />
        <ImageButton
            android:id="@+id/button_about"
            android:onClick="buttonOnClicked"
            android:layout_width="match_parent"
            android:background="#ffffff"
            android:layout_height="wrap_content"
            android:src="@mipmap/about_redondo"
            />
    </TableRow>
    <TableRow>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scroll_eventos"
        android:textColor="#00516C"
        android:textAlignment="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scroll_tools"
        android:lines="2"
        android:textColor="#00516C"
        android:textAlignment="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scroll_about"
        android:textColor="#00516C"
        android:textAlignment="center"
        />
    </TableRow>

</TableLayout>
</ScrollView>