<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#ffffff"
    tools:context="rodrigo.sdm.com.homeinside.IluminacionActivity"
    android:layout_height="match_parent">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*">
        <TableRow
            android:background="@drawable/iluminacion_foto_principal2"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
        </TableRow>

        <TableRow
            android:layout_marginBottom="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#00516C"
                android:textStyle="bold"
                android:textSize="25dp"
                android:text="@string/scroll_ilum"/>
        </TableRow>
        <TableRow
            android:layout_marginBottom="15dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                >
                <TextView
                    android:id="@+id/tv_habitacion1"
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginLeft="5dp"
                    android:textColor="#00516C"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/habitacion_salon"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:weightSum="2"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_marginLeft="15dp"
                        android:id="@+id/textView1"
                        android:textColor="#00516C"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Lampara central" />
                    <ImageView
                        android:id="@+id/salon_principal"
                        android:onClick="onClickBombilla"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:src="@mipmap/bombilla_encendida_redonda"
                        />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:weightSum="2"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_marginLeft="15dp"
                        android:id="@+id/textView2"
                        android:textColor="#00516C"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Lampara Secundaria" />
                    <ImageView
                        android:onClick="onClickBombilla"
                        android:id="@+id/salon_secundaria"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="right"
                        android:src="@mipmap/bombilla_apagada_redonda"
                        />
                </LinearLayout>
            </LinearLayout>
        </TableRow>


        <TableRow
            android:layout_marginBottom="15dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                >
                <TextView
                    android:id="@+id/tv_habitacion2"
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp"
                    android:textColor="#00516C"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/habitacion_cocina"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:weightSum="2"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_marginLeft="15dp"
                        android:id="@+id/textView3"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:textColor="#00516C"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Lampara central" />
                    <ImageView
                        android:id="@+id/cocina"
                        android:onClick="onClickBombilla"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:src="@mipmap/bombilla_encendida_redonda"
                        />
                </LinearLayout>

            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_marginBottom="15dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                >
                <TextView
                    android:id="@+id/tv_habitacion3"
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginLeft="5dp"
                    android:textColor="#00516C"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/habitacion_principal"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:weightSum="2"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_marginLeft="15dp"
                        android:id="@+id/textView4"
                        android:textColor="#00516C"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Lampara central" />
                    <ImageView
                        android:id="@+id/habit_prin_central"
                        android:onClick="onClickBombilla"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:src="@mipmap/bombilla_encendida_redonda"
                        />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:weightSum="2"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_marginLeft="15dp"
                        android:id="@+id/textView5"
                        android:textColor="#00516C"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Lampara Secundaria" />
                    <ImageView
                        android:id="@+id/habit_prin_secundaria"
                        android:onClick="onClickBombilla"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="right"
                        android:src="@mipmap/bombilla_apagada_redonda"
                        />
                </LinearLayout>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_marginBottom="15dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                >
                <TextView
                    android:id="@+id/tv_habitacion4"
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:textColor="#00516C"
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/habitacion_bano"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:weightSum="2"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_marginLeft="15dp"
                        android:id="@+id/textView6"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:textColor="#00516C"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Lampara central" />
                    <ImageView
                        android:id="@+id/bano"
                        android:onClick="onClickBombilla"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:src="@mipmap/bombilla_encendida_redonda"
                        />
                </LinearLayout>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_marginBottom="15dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                >
                <TextView
                    android:id="@+id/tv_habitacion5"
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginLeft="5dp"
                    android:textColor="#00516C"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/habitacion_invitados"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:weightSum="2"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_marginLeft="15dp"
                        android:id="@+id/textView7"
                        android:textColor="#00516C"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Lampara central" />
                    <ImageView
                        android:id="@+id/habit_sec_central"
                        android:onClick="onClickBombilla"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:src="@mipmap/bombilla_encendida_redonda"
                        />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:weightSum="2"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_marginLeft="15dp"
                        android:id="@+id/textView8"
                        android:textColor="#00516C"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Lampara Secundaria" />
                    <ImageView
                        android:id="@+id/habit_sec_sec"
                        android:onClick="onClickBombilla"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="right"
                        android:src="@mipmap/bombilla_apagada_redonda"
                        />
                </LinearLayout>
            </LinearLayout>
        </TableRow>
    </TableLayout>
</ScrollView>
